# agentic-ai-for-coding

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  WORKFLOW.md  pyproject.toml
.automation/: issue-prompt.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/automation/: README.md  __init__.py  agent_adapter.py  agent_manager.py  celery_dispatcher.py  celery_tasks.py  cli.py  executor.py  failure_reporting.py  github_client.py  metrics.py  models.py  service.py  workflow.py
.github/automation/evals/: dataset.json
.github/automation/scripts/: check-pr-template.py  classify-failure.py  init-automation-env.ps1  manage-agents.py  metrics-snapshot.py  poc-multi-agent-demo.py  prepare-single-issue.ps1  prepare-single-issue.py  publish-backlog-issue.ps1  quality-gate.py  replay-eval.py  run-agent-adapter.ps1  run-celery-dispatch.ps1  run-celery-dispatch.sh  run-celery-worker.ps1  run-celery-worker.sh  run-forever.ps1  run-forever.sh  run-once.ps1  run-once.sh  workspace-hooks.py
.github/automation/skills/: README.md  skill_runner.py  skills.yaml
.github/issues-backlog/: README.md  TEMPLATE.md
.github/issues-backlog/bug/: 20260528-sample-bug.md
.github/issues-backlog/feature/: 20260528-sample-feature.md
.github/manual/: README.md
.github/manual/scripts/: create-pr.ps1  (+13 more)
.github/prompts/: create-doc-prompt.md  create-issue-prompt.md
.github/workflows/: ci.yml  copilot-agent.yml  release.yml
.manual/: issue-prompt.md
docs/: ai-coding-infra-executable-blueprint.md  architecture.md  automation-e2e-notes.md  automation-runner-e2e-report.md  dev-guide.md  multi-agent-configuration-guide.md  multi-agent-evaluation-report.md  weekly-report-template.md  自动化多任务并行处理设计.md
docs/adr/: 0001-record-architecture-decisions.md
docs/sdd/: README.md  backlog-derived-design-summary.md  sdd-index.backlog-generated.md  sdd-index.md
docs/training/: ai-for-coding-training.html
src/: __init__.py
src/agent/: __init__.py  core.py  session.py
src/api/: __init__.py  routes.py
src/memory/: __init__.py  store.py
src/tools/: __init__.py  registry.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_agent_adapter.py  test_automation_github_client.py  test_failure_reporting.py  test_memory.py  test_metrics_snapshot.py  test_orchestration_service.py  test_pr_template_checker.py  test_prepare_single_issue.py  test_quality_gate_runner.py  test_replay_eval.py  test_tools.py  test_workflow_loader.py  test_workspace_hooks.py
(+42 files in other folders)
