[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent 应用 — 基于自动化流程模板"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
automation = [
    "celery[redis]>=5.4.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",  # FastAPI 测试客户端依赖
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit[toml]>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─────────────────────────────────────────────
# Ruff 配置（代码格式化 + Lint）
# ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",    # assert 语句（测试中常用）
    "RUF001",  # 中文字符串中的全角标点（符合中文书写习惯）
    "RUF002",  # 中文文档字符串中的全角标点（符合中文书写习惯）
    "RUF003",  # 中文注释中的全角标点（符合中文书写习惯）
    "ANN401",  # 部分 API 接受任意类型（MemoryStore.set/get）
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # 测试中允许使用 assert
    "ANN",     # 测试文件不强制要求类型注解
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────
# Mypy 配置（类型检查）
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ─────────────────────────────────────────────
# Pytest 配置
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

# ─────────────────────────────────────────────
# Bandit 配置（安全扫描）
# ─────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # 允许 assert 语句
